虚拟机参数